--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,10 +14,17 @@
                         autofocus>
                 </div>
 
+
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your Email" required>
+                </div>
+
                 <div>
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" placeholder="Enter your Password" required>
                 </div>
+
 
                 <div>
                     <button type="submit" class="">
